--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 }
 
 plugins {
-    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.minecraftforge.gradle' version '[6.0.14,6.2)'
 }
 
 apply plugin: 'org.spongepowered.mixin'
@@ -37,7 +37,7 @@ minecraft {
     //
     // Use non-default mappings at your own risk. They may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.20.2'
+    mappings channel: 'official', version: '1.20.1'
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -143,10 +143,8 @@ dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.20.2-48.0.13'
-    implementation fg.deobf('curse.maven:just-zoom-forge-561885:4766223')
-    implementation fg.deobf('curse.maven:konkrete-410295:4764528')
-    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.20.2:4.2.3')
+    minecraft 'net.minecraftforge:forge:1.20.1-47.1.0'
+//    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.20.2:4.2.3')
 
 
     // For more info...
